--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -24,6 +24,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
   }
 }
