--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "weather-app",
+  "name": "reliable-weather",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^6.1.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
@@ -24,8 +25,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-react": "^7.11.1",
-    "webpack": "^4.21.0",
-    "webpack-cli": "^3.1.2"
+    "eslint-plugin-react": "^7.11.1"
   }
 }
