Troubleshooting issue with production build

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "serve": "^10.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts-start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "heroku-postbuild": "npm run build"
