--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "^10.0.2"
   },
   "scripts": {
+    "dev": "react-scripts-start",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
